Vari cambiamenti e miglioramenti in fol0.
Adesso "termval" e "holds" prendono un ulteriore argomento "V" che è
un predicato binario che valuta le variabli.  Questo ha due vantaggi:
  - è maggiormente aderente al codice di Harrison;
  - l'estensione del binding durante l'interpretazione è più chiara
    (predicato di ordine superiore "extend").

Aggiunti due predicati di ordine superiore "all" e "ex".
  - (all P) è verificato se P vale per tutti gli elementi del dominio;
  -  (ex P) è verificato se P vale per almeno un elmento del dominio.

Grazie ai due predicati precedenti, adesso il predicato holds è molto
più sintetico e chiaro.

Altre modifiche minori:
- aggiunti gli esempi per la semantica in arith4 e bool.
- corretto un errore nella tavola di addizione di arith4.
- adesso bool usa la semantica in bool(!), anziché in int.
- fattorizzati i tests per tutti i linguaggi in un modulo separato.

--- a/fol0/Makefile
+++ b/fol0/Makefile
@@ -1,9 +1,9 @@
-default : main.lp
+default : main.lp main4.lp mainb.lp
 
 %.lpo : %.mod
 	tjcc $<
 
-main.lp : main.lpo
+main.lp main4.lp mainb.lp : %.lp : %.lpo
 	tjlink $<
 
 clean :
@@ -13,8 +13,5 @@ depend : $(wildcard *.mod *.sig)
 	tjdepend $^ > .depend
 
 .PHONY : default depend clean
-
-test :
-	echo 
 
 -include .depend
