Tentativo di integrare i miglioramenti all'interpretazione già fatti in fol0 e fol1 in meta.  Purtroppo i test falliscono.  In Teyjus e in Elpi falliscono test diversi!
Alcune definizioni non necessarie sono state spostate nel nuovo modulo
extras.

Inoltre il nuovo modulo meta contiene una copia di tutto il codice,
per evitare problemi con il meccanismo del caricamento dei moduli.

--- a/meta/Makefile
+++ b/meta/Makefile
@@ -1,13 +1,11 @@
-default :testsucc.lp
-default :main.lp
+default : main.lp testsucc.lp arith3test.lp arith4test.lp \
+  booltests.lp graph0test.lp graph1test.lp
 
 %.lpo : %.mod
 	tjcc $<
 
-
-
-
-testsucc.lp : %.lp : %.lpo
+main.lp testsucc.lp arith3test.lp arith4test.lp \
+  booltests.lp graph0test.lp graph1test.lp : %.lp : %.lpo
 	tjlink $<
 
 clean :
@@ -17,8 +15,5 @@ depend : $(wildcard *.mod *.sig)
 	tjdepend $^ > .depend
 
 .PHONY : default depend clean
-
-test :
-	echo 
 
 -include .depend
